# splunk-connect-for-syslog

./: .addonmatrix  .dockerignore  .env.template  .fossa.yaml  .fossa.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .indexes.conf  .installation.sh  .pre-commit-config.yaml  .readthedocs.yml  .releaserc  .releaserc.yaml  .trivyignore  .yamllint  CHANGELOG  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-2.0  License.md  README.md  SECURITY.md  actionlint  ansible.cfg  app-vps-cisco_meraki.conf  clair-scan.sh  clair-whitelist.yml  clair_to_junit_parser.py  clair_whitelist.txt  clean_old_gh_pages.py  configuration-tool.sh  cr.yaml  demo-with-compose.sh  docker-compose-add-on.yml  docker-compose-ci.yml  docker-compose-debug.yml  docker-compose-demo.yml  docker-compose-perf.yml  (+22 more)
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml  matrix.py  release.sh
1.100.5/: sitemap.xml
1.103.0/: 404.html
1.87.0/: 404.html  index.html
1.90.1/: sitemap.xml
1.91.1/: 404.html
1.91.12/: 404.html
1.91.5/: index.html
1.93.0-develop.8/: sitemap.xml
1252/: 404.html  index.html
1257/: sitemap.xml
1265/: sitemap.xml
1266/: sitemap.xml
1271/: 404.html  index.html
1274/: sitemap.xml
1276/: sitemap.xml
1281/: sitemap.xml
1284/: sitemap.xml
1290/: 404.html  index.html
1293/: sitemap.xml
1295/: sitemap.xml
1301/: sitemap.xml
1304/: 404.html  sitemap.xml
1305/: 404.html  index.html  sitemap.xml
1306/: index.html
1308/: index.html  sitemap.xml
1313/: sitemap.xml
1314/: sitemap.xml
1318/: sitemap.xml
1325/: sitemap.xml
1333/: sitemap.xml
1334/: sitemap.xml
1335/: sitemap.xml
1341/: sitemap.xml
1346/: sitemap.xml
1347/: sitemap.xml
1351/: sitemap.xml
1357/: index.html  sitemap.xml
1358/: index.html
1360/: sitemap.xml
1364/: sitemap.xml
1365/: 404.html  index.html
1377/: index.html
1383/: sitemap.xml
1396/: sitemap.xml
1407/: index.html  sitemap.xml
1413/: 404.html  index.html  sitemap.xml
1414/: index.html  sitemap.xml
1415/: 404.html
1417/: sitemap.xml
1420/: index.html  sitemap.xml
1421/: 404.html  sitemap.xml
1427/: 404.html
1428/: 404.html  sitemap.xml
1434/: 404.html  index.html  sitemap.xml
1435/: 404.html  index.html  sitemap.xml
1440/: 404.html  sitemap.xml
1445/: 404.html  index.html
1447/: 404.html  index.html  sitemap.xml
1448/: 404.html  index.html
1449/: 404.html  index.html  sitemap.xml
1462/: sitemap.xml
1468/: 404.html  index.html  sitemap.xml
1472/: 404.html
1474/: sitemap.xml
1482/: 404.html
1496/: 404.html
1500/: index.html
1501/: sitemap.xml
1504/: 404.html
1507/: sitemap.xml
1508/: sitemap.xml
1513/: index.html
1514/: 404.html  index.html
1519/: 404.html  index.html  sitemap.xml
1522/: sitemap.xml
1523/: sitemap.xml
1528/: sitemap.xml
1529/: index.html
1535/: sitemap.xml
1543/: sitemap.xml
1547/: sitemap.xml
1552/: index.html
1555/: 404.html  index.html  (+1 more)
sc4s_mcp/: Dockerfile  Dockerfile.dockerignore  README.md  app.py  auth.py  health_probe.py  pyproject.toml  server.py  tls.py
sc4s_mcp/knowledge_base/: create_parser_prompt_knowledge.md
sc4s_mcp/prompts/: workflows.py
sc4s_mcp/resources/: docs.py  tools.py
sc4s_mcp/tests/: test_auth.py  test_config_tools.py  test_configurator_tools.py  test_metadata_tools.py  test_tls.py  test_transport.py
sc4s_mcp/tools/: configuration_tools.py  configurator_tools.py  metadata_tools.py
sc4s_mcp/utils/: file_utils.py  http.py  token_utils.py  transport.py
(+9326 files in other folders)
