[tool.poetry]
name = "splunk-connect-for-syslog"
version = "3.5.0"
description = ""
authors = ["rjha-splunk <rjha@splunk.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.2"
sqlitedict = "^2.0.0"
requests = "^2.28.1"
shortuuid = "^1.0.11"


[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-xdist = "^2.3.0"
jinja2-time = "^0.2.0"
splunk-sdk = "^1.7.2"
flake8 = "^5.0.4"
pytz = "^2022.4"
flaky = "^3.7.0"
lovely-pytest-docker = "^0.3.0"
pathlib2 = "^2.3.7"
requests = "^2.28.1"
junit-xml = "^1.9"
mkdocs = "^1.4.0"

mkdocs-material = "^8.5.6"
mike = "^1.1.2"
pre-commit = "^2.20.0"
typing-extensions = "*"
mkdocs-include-dir-to-nav = "^1.2.0"
docker-compose = "^1.29.2"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
