[tool.poetry]
name = "splunk-connect-for-syslog"
version = "3.38.0"
description = ""
authors = ["rjha-splunk <rjha@splunk.com>"]
license = "Apache-2.0"
package-mode = false

[tool.poetry.dependencies]
python = ">3.9.0,<3.9.1 || >3.9.1,<4.0"
Jinja2 = "^3.1.3"
requests = "^2.28.1"
shortuuid = "^1.0.11"
pyyaml = "6.0.2"
setuptools = "^78.0.0"
restricted-sqlitedict = "^1.0.0"
tornado = "^6.4.2"
gunicorn = "^23.0.0"
flask = "^3.1.0"
zipp = "^3.21.0"
cryptography = "^44.0.2"
flask-wtf = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-xdist = "^3.0.0"
jinja2-time = "^0.2.0"
splunk-sdk = "^2.0.0"
flake8 = "^7.0.0"
pytz = "^2022.4"
flaky = "^3.7.0"
lovely-pytest-docker = "^1.0.0"
pathlib2 = "^2.3.7"
requests = "^2.28.1"
junit-xml = "^1.9"
mkdocs = "^1.4.0"

mkdocs-material = "^9.0.0"
mike = "^2.0.0"
pre-commit = "^4.0.0"
typing-extensions = "*"
mkdocs-include-dir-to-nav = "^1.2.0"
black = "^24.0.0"


[tool.pytest.ini_options]
markers = [
    "lite: test for lite version without addons",
    "addons: tests for addons",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
