[tool.poetry]
name = "sc4s-mcp"
version = "3.44.0"
description = "MCP server for SC4S"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastmcp = "^3.2"
httpx = "^0.28"
fastapi = "^0.136.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]
